k8s/flask-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: web-app
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: alyahmed071/flask-todo-app:latest
        ports:
        - containerPort: 5000
        resources:               
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: web-app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
