k8s/mysql-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-app-deployment
  namespace: web-app
  labels:
    app: mysql-app
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      containers:
      - name: mysql-app
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-app-service
  namespace: web-app
spec:
  selector:
    app: mysql-app
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
